# powerlaw

./: .gitignore  BuildCLI.sh  BuildLib.sh  BuildMathlink.sh  CMakeLists.txt  CMakeLists.txt.bak  Clear.sh  LICENSE  README.md  createPackages.sh
CMake/Mathematica/: FindMathematica.cmake
cli/: CLIMain.cpp  CsvParser.h
include/: DiscreteDistributions.h  TestStatistics.h
mathlink/: MLReferenceImplementation.nb  Mathlink.tm  MathlinkExample.nb  MathlinkInterface.cpp  mathlink.tm  mathlink_interface.cpp
reference/.ipynb_checkpoints/: ReferenceImplementation-checkpoint.ipynb
src/: CMakeLists.txt  DiscreteDistributions.cpp  DiscreteDistributions.h  Main.cpp  ProgressBar.cpp  ProgressBar.h  RandomGen.cpp  RandomGen.h  TestStatistics.cpp  TestStatistics.h  VectorOperations.h  VectorUtilities.h  Zeta.cpp  Zeta.h
testing/: sampleData.csv
